--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="container">
       <div class="header__container">
         <a href="#" class="header__logo">
-          <img src="/icon/noemi-logo.svg" alt="logo NOEMI" />
+          <img src="./icon/noemi-logo.svg" alt="logo NOEMI" />
         </a>
         <nav class="header__menu">
           <ul class="header__menu-link">
