--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="wrapper__trends">
       <div class="trend__container">
         <img
-          src="/img/image_1.png"
+          src="./img/image_1.png"
           alt="Сейчас в тренде: сад на подоконнике"
           class="trend__img"
         />
@@ -69,7 +69,7 @@
       </div>
       <div class="trend__container">
         <img
-          src="/img/image_2.png"
+          src="./img/image_2.png"
           alt="сыры на красивых картинках из интернета: какие они на вкус?"
           class="trend__img"
         />
@@ -86,7 +86,7 @@
       </div>
       <div class="trend__container">
         <img
-          src="/img/image_3.png"
+          src="./img/image_3.png"
           alt="Собираемся в первый поход в город"
           class="trend__img"
         />
@@ -106,7 +106,7 @@
       </div>
       <div class="trend__container">
         <img
-          src="/img/image_4.png"
+          src="./img/image_4.png"
           alt="Сейчас в тренде: сколько витамина С в лимонах?"
           class="trend__img"
         />
@@ -132,7 +132,7 @@
           <!-- Фото -->
           <figure class="list__post-img">
             <img
-              src="/img/image_1-1.png"
+              src="./img/image_1-1.png"
               alt="10 мест, ради которых стоит проснуться на рассветеве"
             />
           </figure>
@@ -167,7 +167,7 @@
           <!-- Фото -->
           <figure class="list__post-img">
             <img
-              src="/img/image_1-2.png"
+              src="./img/image_1-2.png"
               alt="ЙОга для начинающих в домашних условиях"
             />
           </figure>
@@ -202,7 +202,7 @@
           <!-- Фото -->
           <figure class="list__post-img">
             <img
-              src="/img/image_1-3.png"
+              src="./img/image_1-3.png"
               alt="ЙОга для начинающих в домашних условиях"
             />
           </figure>
@@ -237,7 +237,7 @@
           <!-- Фото -->
           <figure class="list__post-img">
             <img
-              src="/img/image_1-4.png"
+              src="./img/image_1-4.png"
               alt="ЙОга для начинающих в домашних условиях"
             />
           </figure>
@@ -270,7 +270,7 @@
           <!-- Фото -->
           <figure class="list__post-img">
             <img
-              src="/img/image_1-5.png"
+              src="./img/image_1-5.png"
               alt="делаем модные принты на подушках для интерьера"
             />
           </figure>
@@ -313,7 +313,7 @@
           <section class="new__post-content">
             <figure class="news__post-img">
               <img
-                src="/img/image_1-1.png"
+                src="./img/image_1-1.png"
                 alt="10 мест, ради которых стоитпроснуться"
               />
             </figure>
@@ -332,7 +332,7 @@
           </section>
           <section class="new__post-content">
             <figure class="news__post-img">
-              <img src="/img/image_1-2.png" alt="Йога для домашних" />
+              <img src="./img/image_1-2.png" alt="Йога для домашних" />
             </figure>
             <section class="new__post-time">
               <div>
@@ -348,7 +348,7 @@
           <section class="new__post-content">
             <figure class="news__post-img">
               <img
-                src="/img/image_1-3.png"
+                src="./img/image_1-3.png"
                 alt="как мы превратили классное место в балкон"
               />
             </figure>
@@ -367,7 +367,7 @@
           </section>
           <section class="new__post-content">
             <figure class="news__post-img">
-              <img src="/img/image_1-4.png" alt="Кулинарный подход к науке" />
+              <img src="./img/image_1-4.png" alt="Кулинарный подход к науке" />
             </figure>
             <section class="new__post-time">
               <div>
@@ -383,7 +383,7 @@
           <section class="new__post-content">
             <figure class="news__post-img">
               <img
-                src="/img/image_1-5.png"
+                src="./img/image_1-5.png"
                 alt="лучшие прически для распущенных волос"
               />
             </figure>
@@ -532,7 +532,7 @@
     <div class="products__wrapper">
       <div class="products__container">
         <figure class="products__img">
-          <img src="/img/image_1-5.png" alt="Подушки на диван" />
+          <img src="./img/image_1-5.png" alt="Подушки на диван" />
         </figure>
         <div class="products__content">
           <h2 class="products__title">Подушки на диван</h2>
@@ -551,7 +551,7 @@
       </div>
       <div class="products__container">
         <figure class="products__img">
-          <img src="/img/image_1-6.png" alt="Кукла «Зайчик»" />
+          <img src="./img/image_1-6.png" alt="Кукла «Зайчик»" />
         </figure>
         <div class="products__content">
           <h2 class="products__title">Кукла «Зайчик»</h2>
@@ -571,7 +571,7 @@
       </div>
       <div class="products__container">
         <figure class="products__img">
-          <img src="/img/image_1-7.png" alt="Шестиугольная рамка" />
+          <img src="./img/image_1-7.png" alt="Шестиугольная рамка" />
         </figure>
         <div class="products__content">
           <h2 class="products__title">Шестиугольная рамка</h2>
