--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Дипломная работа</title>
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/tablet.css">
   <link rel="stylesheet" href="./css/mobile.css">
-  <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/default.css">
+
+  <link rel="stylesheet" href="styles-medium.css" media="screen and (orientation: portrait) and (min-width: 641px) and (max-width: 1200px)">
+    <link rel="stylesheet" href="styles-landscape.css" media="screen and (orientation: landscape) and (min-width: 641px) and (max-width: 1200px)">
+    <link rel="stylesheet" href="styles-portrait-small.css" media="screen and (orientation: portrait) and (max-width: 640px)">
+    <link rel="stylesheet" href="styles-landscape-small.css" media="screen and (orientation: landscape) and (max-width: 640px)">
 </head>
 <header class="header">
   <section class="container">
